# integral-image

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cc
src/image_integrator/: CMakeLists.txt  image_integrator.cc  image_integrator.hh
src/multithread_utils/: CMakeLists.txt  log.cc  log.hh  thread_pool.cc  thread_pool.hh
src/task_pool/: CMakeLists.txt  task_pool.cc  task_pool.hh
src/tests/: CMakeLists.txt  image_integrator_test.cc
